BEE-1 The partition count of the Topic can be changed.
