# static/swagger.json
@@ -9,11 +9,16 @@
     }
   },
   "basePath": "/",
-  "schemes": ["https", "http"],
+  "schemes": [
+    "http",
+    "https"
+  ],
   "paths": {
     "/kafka-cluster": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all kafka clusters info",
         "description": "Get all kafka clusters info",
         "operationId": "kafka-cluster",
@@ -26,7 +31,9 @@
     },
     "/search": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Search any keyword in key or value",
         "description": "Search any keyword in key or value",
         "operationId": "search",
@@ -94,7 +101,9 @@
         }
       },
       "delete": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Delete search data",
         "description": "Delete search data",
         "operationId": "delete-search",
@@ -125,7 +134,9 @@
     },
     "/topics": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all topics",
         "description": "Get all topics",
         "operationId": "topics",
@@ -153,7 +164,9 @@
         }
       },
       "delete": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Remove topic",
         "description": "Remove topic",
         "operationId": "delete-topic",
@@ -184,7 +197,9 @@
     },
     "/consumers": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all consumer groups",
         "description": "Get all consumer groups",
         "operationId": "consumers",
@@ -212,7 +227,9 @@
         }
       },
       "delete": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Remove consumer group",
         "description": "Remove consumer group",
         "operationId": "delete-consumer-group",
@@ -243,7 +260,9 @@
     },
     "/consumer-group-by-topic": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all consumer groups via topic",
         "description": "Get all consumer groups via topic",
         "operationId": "consumer-group-by-topic",
@@ -275,7 +294,9 @@
     },
     "/consumer-group-by-group-id": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all consumer groups via group id",
         "description": "Get all consumer groups via group id",
         "operationId": "consumer-group-by-group-id",
@@ -307,7 +328,9 @@
     },
     "/get-top-messages": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get messages of topic",
         "description": "Get messages of topic",
         "operationId": "get-top-messages",
@@ -356,7 +379,9 @@
     },
     "/get-message": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get one message of topic",
         "description": "Get one message of topic",
         "operationId": "get-message",
@@ -402,7 +427,9 @@
     },
     "/get-topic-info": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Summarize of topic",
         "description": "Summarize of topic",
         "operationId": "get-topic-info",
@@ -434,7 +461,9 @@
     },
     "/get-consumer-info": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Summarize of consumer group",
         "description": "Summarize of consumer group",
         "operationId": "get-consumer-info",
@@ -466,7 +495,9 @@
     },
     "/get-topic-configuration": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all configuration of topic",
         "description": "Get all configuration of topic",
         "operationId": "get-topic-configuration",
@@ -498,11 +529,15 @@
     },
     "/put-change-offset": {
       "put": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Change group offset in a topic",
         "description": "Change group offset in a topic",
         "operationId": "put-change-offset",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "in": "body",
@@ -532,7 +567,9 @@
     },
     "/get-simulation-change-offset": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Simulation of change group offset in a topic",
         "description": "Simulation of change group offset in a topic",
         "operationId": "get-simulation-change-offset",
@@ -556,7 +593,12 @@
             "in": "query",
             "type": "string",
             "required": true,
-            "enum": ["BEGINNING", "END", "SHIFTBY", "DATE"],
+            "enum": [
+              "BEGINNING",
+              "END",
+              "SHIFTBY",
+              "DATE"
+            ],
             "default": "BEGINNING"
           },
           {
@@ -585,7 +627,9 @@
     },
     "/get-match-topic-and-groups-job": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Trigger a job to match groups for topics",
         "description": "Trigger a job to match groups for topics",
         "operationId": "get-match-topic-and-groups-job",
@@ -598,7 +642,9 @@
     },
     "/cache-clear": {
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Clear of caches belong to topics and groups",
         "description": "Clear of caches belong to topics and groups",
         "operationId": "cache-clear",
@@ -611,11 +657,15 @@
     },
     "/{topic}/publish-message": {
       "post": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Publish message to the topic",
         "description": "Publish message to the topic",
         "operationId": "post-publish-message",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "topic",
@@ -663,11 +713,15 @@
     },
     "/copy-event": {
       "post": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Copy message to the specific topic from specific topic",
         "description": "Copy message to the specific topic from specific topic",
         "operationId": "post-copy-event",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "in": "body",
@@ -695,7 +749,9 @@
         }
       },
       "get": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Get all copy process",
         "description": "Get all copy process",
         "operationId": "get-copy-event",
@@ -722,7 +778,9 @@
         }
       },
       "delete": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Remove specific copy state",
         "description": "Remove specific copy state",
         "operationId": "delete-copy-event",
@@ -751,11 +809,15 @@
     },
     "/{topic}/topic-configuration": {
       "put": {
-        "tags": ["kafka"],
+        "tags": [
+          "kafka"
+        ],
         "summary": "Change specific value of topic's config",
         "description": "Change specific value of topic's config",
         "operationId": "put-topic-configuration",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "topic",
@@ -771,6 +833,51 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/TopicConfigurationRequest"
+            }
+          },
+          {
+            "name": "kafka-id",
+            "in": "header",
+            "description": "kafka-id",
+            "required": true,
+            "type": "integer",
+            "format": "int64",
+            "default": 0
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation"
+          }
+        }
+      }
+    },
+    "/{topic}/change-partition-count": {
+      "put": {
+        "tags": [
+          "kafka"
+        ],
+        "summary": "Change partition count of topic",
+        "description": "Change partition count of topic",
+        "operationId": "put-change-partition-count",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "topic",
+            "in": "path",
+            "description": "Topic Name",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Key and value of the topic's config",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ChangePartitionCountRequest"
             }
           },
           {
@@ -809,7 +916,11 @@
     },
     "PutChangeOffsetRequest": {
       "type": "object",
-      "required": ["group_id", "topic_name", "offset_type"],
+      "required": [
+        "group_id",
+        "topic_name",
+        "offset_type"
+      ],
       "properties": {
         "group_id": {
           "type": "string"
@@ -820,7 +931,12 @@
         "offset_type": {
           "type": "string",
           "description": "Change type of offset",
-          "enum": ["BEGINNING", "END", "SHIFTBY", "DATE"]
+          "enum": [
+            "BEGINNING",
+            "END",
+            "SHIFTBY",
+            "DATE"
+          ]
         },
         "value": {
           "type": "integer",
@@ -830,7 +946,10 @@
     },
     "PostCopyEventRequest": {
       "type": "object",
-      "required": ["fromTopic", "toTopic"],
+      "required": [
+        "fromTopic",
+        "toTopic"
+      ],
       "properties": {
         "fromTopic": {
           "type": "string"
@@ -858,6 +977,15 @@
         "value": {
           "type": "string",
           "description": "Config value"
+        }
+      }
+    },
+    "ChangePartitionCountRequest": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "integer",
+          "format": "int64"
         }
       }
     }
